# ChatApp

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  cert.der  docker-compose.yaml  dockerfile  key.der  todo.txt
browser_pty/: Cargo.toml  dockerfile
browser_pty/src/: handle_connection.rs  main.rs  util.rs
browser_pty/static/: index.html
client/: Cargo.toml
client/src/: data_stream.rs  main.rs  read_server.rs  write_server.rs
client/src/global_states/: app_state.rs  console_logger.rs  mod.rs  thread_logger.rs
client/src/tui/: mod.rs
client/src/tui/accessories/create_room/: app_create_room.rs  create_room.rs  create_room_display.rs  mod.rs
client/src/tui/accessories/file_selector/: app_file_selector.rs  file_selector.rs  file_selector_display.rs  file_selector_tui_conversions.rs  mod.rs
client/src/tui/app/: app.rs  app_display.rs  mod.rs
client/src/tui/entry_screen/: app_entry_screen.rs  entry_screen_display.rs  mod.rs
client/src/tui/main_screen/: app_main_screen.rs  main_screen_display.rs  main_screen_tui_conversions.rs  mod.rs
client/src/util/: config.rs  functions.rs  types.rs
server/: Cargo.toml  dockerfile
server/shared/: Cargo.toml
server/src/: client_task.rs  handle_connection.rs  lib.rs  main.rs  manager_task.rs  persistence_task.rs
server/src/browser_pty/: server.rs
server/src/util/: config.rs  server_functions.rs
server/src/util/types/: mod.rs  server_data_types.rs  server_error_types.rs  server_error_wrapper_types.rs
server/static/: index.html
shared/src/: config.rs  types.rs
src/: lib.rs
src/client_lib/: app_state.rs  config.rs  data_stream.rs  functions.rs  mod.rs  read_server.rs  types.rs  util_functions.rs  write_server.rs  write_to_server.rs
src/client_lib/app/: app.rs  app_functions.rs  mod.rs
src/client_lib/app/widgets/: app_widget.rs  channel_msg.rs  contact.rs  mod.rs  tui_msg.rs
src/client_lib/global_states/: app_state.rs  console_logger.rs  mod.rs  thread_logger.rs
src/client_lib/tui/: app_functions.rs  mod.rs
src/client_lib/tui/accessories/: mod.rs
src/client_lib/tui/accessories/create_room/: app_create_room.rs  create_room.rs  create_room_display.rs
src/client_lib/tui/accessories/file_selector/: app_file_selector.rs  file_selector.rs  file_selector_display.rs  file_selector_tui_conversions.rs  file_selector_widget.rs  mod.rs
src/client_lib/tui/app/: app.rs  app_display.rs  mod.rs
src/client_lib/tui/entry_screen/: app_entry_screen.rs  entry_screen_display.rs
src/client_lib/tui/login_screen/: app_entry_screen.rs  entry_display.rs  login_screen.rs  login_screen_display.rs  mod.rs
src/client_lib/tui/main_screen/: app_main_screen.rs  main_screen.rs  main_screen_display.rs  main_screen_tui_conversions.rs  mod.rs
src/client_lib/util/: config.rs  errors.rs  functions.rs  mod.rs  types.rs  types_impl.rs
src/server_lib/: client_task.rs  config.rs  errors.rs  functions.rs  handle_connection.rs  manager_task.rs  mod.rs  persistence_task.rs  types.rs
src/server_lib/util/: config.rs  errors.rs  mod.rs  server_functions.rs  types.rs
src/server_lib/util/types/: server_data_types.rs  server_error_types.rs  server_error_wrapper_types.rs
src/shared_lib/: config.rs  mod.rs  types.rs  util_functions.rs
