[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.4", features = ["v4"] }
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
futures = "0.3.31"
