[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.4", features = ["v4", "serde"] }
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.97"
thiserror = "2.0.12"
once_cell = "1.21.3"
serde_bytes = "0.11.17"
bytes = "1.10.1"
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-textarea = "0.7.0"
