[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.4", features = ["v4", "serde"] }
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
futures = "0.3.31"
anyhow = { version = "1.0.97", features = ["backtrace"] }
thiserror = "2.0.12"
once_cell = "1.21.3"
serde_bytes = "0.11.17"
bytes = "1.10.1"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
artem = "=3.0.0"
image = "0.25.6"
crossbeam = "0.8.4"
error-stack = "0.5.0"
log = "0.4.27"
env_logger = "0.11.8"
