[package]
name = "browser_pty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
dotenv = "0.15.0"
expectrl = "0.7.1"
futures = "0.3.31"
portable-pty = "0.9.0"
run = "0.1.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.3", features = ["websocket"] }
