[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
uuid = { version = "1.4", features = ["v4", "serde"] }
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
futures = "0.3.31"
anyhow = { version = "1.0.97", features = ["backtrace"] }
thiserror = "2.0.12"
serde_bytes = "0.11.17"
bytes = "1.10.1"
log = "0.4.27"
env_logger = "0.11.8"
backtrace = "0.3.75"
regex = "1.11.1"
mongodb = "3.2.3"
argon2 = "0.5.3"
dotenv = "0.15.0"
